# arandu

./: .gitignore  Pipfile  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
api/: login.py  sculptures.py
backend/: auth.py  sculpture_database.py
src/: App.tsx  sculptures.ts
src/components/: BurgerMenu.tsx  ContactForm.tsx  CustomSlider.tsx  FormInput.tsx  Hero.tsx  LanguageSwitcher.tsx  Layout.tsx  Login.tsx  ModalImage.tsx  PorfolioSlider.tsx  PortfolioCarousel.tsx  PortfolioGrid.tsx  PortfolioImage.tsx  SculptureForm.tsx  SculptureList.tsx  components.tsx
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json
src/store/: siteStore.ts
src/views/: About.tsx  Admin.tsx  Contact.tsx  Home.tsx  Portfolio.tsx
